VFS-12328 Added spacing between forced newlines in message in Datahub front-page; PR fixes

--- a/examples/egi-datahub/style.css
+++ b/examples/egi-datahub/style.css
@@ -199,6 +199,12 @@ button.loading .button-spinner {
   overflow: auto;
 }
 
+.login-message-container br {
+  margin-bottom: 0.4em;
+  display: block;
+  content: " ";
+}
+
 .login-notification + .login-notification {
   padding-top: 0.5em;
   margin-top: 0.5em;
